chore: make the sync week run every 15 mins

--- a/.github/workflows/sync-from-parent.yml
+++ b/.github/workflows/sync-from-parent.yml
@@ -5,6 +5,8 @@ on:
     types: [opened, edited]
   project_card:
     types: [moved, edited]
+  schedule:
+    - cron: "*/15 * * * *"   # every 15 minutes
 
 permissions:
   issues: write
