--- a/.github/workflows/sync-from-parent.yml
+++ b/.github/workflows/sync-from-parent.yml
@@ -7,6 +7,7 @@ on:
     types: [moved, edited]
   schedule:
     - cron: "*/15 * * * *"   # every 15 minutes
+  workflow_dispatch:  # Allows manual triggering
 
 permissions:
   issues: write
